# pi-parking-enforcer

./: .gitignore  README.md  car_detector.py  config.py  env.example  fix_camera_conflict.py  main.py  parking_monitor.py  pyproject.toml  reset_camera.py  setup.py  test_camera.py  test_camera_formats.py  test_camera_simple.py  test_installation.py  web_interface.py
src/: __init__.py  car_detector.py  config.py  database.py  parking_monitor.py  slack_integration.py  web_interface.py
src/static/js/: dashboard.js
src/templates/: dashboard.html
static/css/: dashboard.css
